fixed small layout issue with courses/show

--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -11,7 +11,7 @@
         cursor: pointer;
     }
     
-    .info {
+    .info-left {
         display: flex;
         font-size: 80%;
         line-height: 15px;
